extends Control

# -----------------------------
# üéØ ‡∏ï‡∏±‡∏ß‡πÅ‡∏õ‡∏£ UI ‡∏ó‡∏µ‡πà‡πÄ‡∏ä‡∏∑‡πà‡∏≠‡∏°‡∏Å‡∏±‡∏ö Label ‡πÅ‡∏•‡∏∞‡∏õ‡∏∏‡πà‡∏°‡πÉ‡∏ô Scene
# -----------------------------
@onready var score_label: Label = $ScoreLabel
@onready var time_label: Label = $TimeLabel
@onready var play_again_button: Button = $PlayAgainButton
@onready var quit_button: Button = $QuitButton

func _ready():
	# 1Ô∏è‚É£ ‡∏´‡∏¢‡∏∏‡∏î‡∏Å‡∏≤‡∏£‡∏à‡∏±‡∏ö‡πÄ‡∏ß‡∏•‡∏≤‡πÉ‡∏ô GameManager
	GameManager.timer_active = false
	
	# 2Ô∏è‚É£ ‡πÅ‡∏™‡∏î‡∏á‡∏Ñ‡∏∞‡πÅ‡∏ô‡∏ô‡∏£‡∏ß‡∏°
	if is_instance_valid(score_label):
		score_label.text = "Score: %d" % GameManager.total_score
	
	# 3Ô∏è‚É£ ‡∏Ñ‡∏≥‡∏ô‡∏ß‡∏ì‡πÅ‡∏•‡∏∞‡πÅ‡∏™‡∏î‡∏á‡πÄ‡∏ß‡∏•‡∏≤
	var total_seconds = GameManager.total_time
	var minutes = int(total_seconds) / 60
	var seconds = int(total_seconds) % 60
	if is_instance_valid(time_label):
		time_label.text = "Time Survived: %02d:%02d" % [minutes, seconds]
	
	# 4Ô∏è‚É£ ‡πÄ‡∏õ‡∏¥‡∏î‡πÄ‡∏°‡∏≤‡∏™‡πå‡πÉ‡∏´‡πâ‡∏Ñ‡∏•‡∏¥‡∏Å‡∏õ‡∏∏‡πà‡∏°‡πÑ‡∏î‡πâ
	Input.set_mouse_mode(Input.MOUSE_MODE_VISIBLE)
	

# -----------------------------
# üîÅ ‡∏õ‡∏∏‡πà‡∏° "‡πÄ‡∏•‡πà‡∏ô‡∏≠‡∏µ‡∏Å‡∏Ñ‡∏£‡∏±‡πâ‡∏á"
# -----------------------------
func _on_play_again_button_pressed():
	GameManager.reset_game_data()
	get_tree().change_scene_to_file("res://world.tscn")


# -----------------------------
# üö™ ‡∏õ‡∏∏‡πà‡∏° "‡∏≠‡∏≠‡∏Å‡πÄ‡∏Å‡∏°"
# -----------------------------
func _on_quit_button_pressed():
	get_tree().quit()
